@@ -1,3 +1,11 @@
+2010-08-23 [pawel]	3.7.6cvs29
+
+	* src/inc.c
+	* src/send_message.c
+	* src/statusbar.c
+	* src/toolbar.c
+		Hide progressbar on statusbar when not needed
+
 2010-08-17 [colin]	3.7.6cvs28
 
 	* src/main.c
